updated the projects section for mobile

--- a/style.css
+++ b/style.css
@@ -163,6 +163,23 @@ nav{
         position: relative;
     }
 
+
+    .my-projects, .cards{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+
+    /* Mentors */
+
+    /* .mentors-arrows {
+      display: none;
+      
+    } */
+
+    
+
    
 }
 
