--- a/style.css
+++ b/style.css
@@ -130,6 +130,8 @@ nav{
         text-align: center;
         position: relative;
         align-items: center;
+      
+       
     }
 
     .learn {
@@ -168,15 +170,23 @@ nav{
       display: flex;
       flex-direction: column;
       align-items: center;
+    
     }
 
+    .my-projects{
+      border: 2px solid red;
+      margin-top: 40px;
+
+    }
+
+    
 
     /* Mentors */
 
-    /* .mentors-arrows {
+    .mentors-arrows {
       display: none;
       
-    } */
+    } 
 
     
 
